{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 83,
  "lineage": "88c6d1d6-6f37-37c6-0613-8cd8be92765d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-067304f9058f9df1d",
            "domain": "vpc",
            "id": "eipalloc-022577a722387b7c0",
            "network_interface": "eni-0a8fe506798b26809",
            "private_dns": "ip-10-0-0-52.us-west-2.compute.internal",
            "private_ip": "10.0.0.52",
            "public_dns": "ec2-44-224-78-85.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.78.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b0bb826768f547e1",
            "owner_id": "462215897714",
            "tags": {
              "Name": "Web_IGW"
            },
            "vpc_id": "vpc-08ac20c230f7ea269"
          },
          "depends_on": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c4191f9d72b526a",
            "original_route_table_id": "rtb-0e43751e0b96d8a6b",
            "route_table_id": "rtb-0e43751e0b96d8a6b",
            "vpc_id": "vpc-08ac20c230f7ea269"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Web_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022577a722387b7c0",
            "id": "nat-089fb68d453266125",
            "network_interface_id": "eni-0a8fe506798b26809",
            "private_ip": "10.0.0.52",
            "public_ip": "44.224.78.85",
            "subnet_id": "subnet-0056199e4a9021821",
            "tags": {
              "Name": "web-nat-gateway"
            }
          },
          "depends_on": [
            "aws_eip.nat-eip",
            "aws_subnet.Public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d03d9189b0d272eb",
            "owner_id": "462215897714",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-089fb68d453266125",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-private-rt"
            },
            "vpc_id": "vpc-08ac20c230f7ea269"
          },
          "depends_on": [
            "aws_nat_gateway.Web_nat",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e43751e0b96d8a6b",
            "owner_id": "462215897714",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0bb826768f547e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-public-rt"
            },
            "vpc_id": "vpc-08ac20c230f7ea269"
          },
          "depends_on": [
            "aws_internet_gateway.web-gw",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dd836c0e40dd084",
            "route_table_id": "rtb-0d03d9189b0d272eb",
            "subnet_id": "subnet-061586efefe449c96"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b3bccf3ac6927e9",
            "route_table_id": "rtb-0e43751e0b96d8a6b",
            "subnet_id": "subnet-0056199e4a9021821"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.Public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:462215897714:subnet/subnet-0056199e4a9021821",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/26",
            "id": "subnet-0056199e4a9021821",
            "map_public_ip_on_launch": false,
            "owner_id": "462215897714",
            "tags": {
              "Name": "public-subnet-web"
            },
            "vpc_id": "vpc-08ac20c230f7ea269"
          },
          "depends_on": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:462215897714:subnet/subnet-061586efefe449c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.64/26",
            "id": "subnet-061586efefe449c96",
            "map_public_ip_on_launch": false,
            "owner_id": "462215897714",
            "tags": {
              "Name": "private-subnet-web"
            },
            "vpc_id": "vpc-08ac20c230f7ea269"
          },
          "depends_on": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:462215897714:vpc/vpc-08ac20c230f7ea269",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b25f5589b851848c",
            "default_route_table_id": "rtb-0e43751e0b96d8a6b",
            "default_security_group_id": "sg-0cba1fb45b5fbeb69",
            "dhcp_options_id": "dopt-ed2a9895",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08ac20c230f7ea269",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e43751e0b96d8a6b",
            "owner_id": "462215897714",
            "tags": {
              "Name": "Web_VPC"
            }
          }
        }
      ]
    }
  ]
}